--- a/styles/main.css
+++ b/styles/main.css
@@ -985,6 +985,48 @@ main .wrapper {
   }
 }
 @media (max-width: 768px) {
+  .workshop {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .container-left,
+.container-right {
+    max-width: 100vw;
+  }
+  .container-left .btn,
+.container-right .btn {
+    display: block;
+    text-align: center;
+  }
+
+  .container-left__text {
+    width: 80%;
+    margin: auto auto 15% auto;
+    padding: 0;
+    text-align: left;
+  }
+
+  .container-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .container-right__text {
+    width: 80%;
+    margin: auto auto 15% auto;
+    padding: 0;
+  }
+  .container-right__img {
+    margin-bottom: 5rem;
+  }
+
   .feature ul {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -996,6 +1038,10 @@ main .wrapper {
   }
   .feature ul li {
     width: 80%;
+  }
+
+  .banner {
+    height: 45vw;
   }
 
   .gallery .wrapper {
