--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -35,6 +35,42 @@
 }
 
 @media (max-width: 768px) {
+  .workshop {
+    flex-direction: column;
+  }
+
+  .container-left,
+  .container-right {
+    max-width: 100vw;
+
+    & .btn {
+      display: block;
+      text-align: center;
+    }
+  }
+
+  .container-left__text {
+    width: 80%;
+    margin: auto auto 15% auto;
+    padding: 0;
+    text-align: left;
+  }
+
+  .container-right {
+    display: flex;
+    flex-direction: column-reverse;
+
+    &__text {
+      width: 80%;
+      margin: auto auto 15% auto;
+      padding: 0;
+    }
+
+    &__img {
+      margin-bottom: 5rem;
+    }
+  }
+
   .feature ul {
     flex-direction: column;
     align-items: center;
@@ -42,6 +78,10 @@
     & li {
       width: 80%;
     }
+  }
+
+  .banner {
+    height: 45vw;
   }
 
   .gallery .wrapper {
