added few more media queries files for different pages

--- a/styles/main.css
+++ b/styles/main.css
@@ -1059,10 +1059,15 @@ main .wrapper {
   }
   .feature ul li {
     width: 80%;
+    margin-bottom: 20%;
   }
 
   .banner {
     height: 45vw;
+  }
+
+  .founder h2 {
+    text-align: center;
   }
 
   .gallery .wrapper {
