--- a/styles/sass/media-queries/_media-home.scss
+++ b/styles/sass/media-queries/_media-home.scss
@@ -95,11 +95,16 @@
 
     & li {
       width: 80%;
+      margin-bottom: 20%;
     }
   }
 
   .banner {
     height: 45vw;
+  }
+
+  .founder h2 {
+    text-align: center;
   }
 
   .gallery .wrapper {
