--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -6,4 +6,4 @@
 @import "layout/homeMain";
 @import "layout/blog";
 @import "layout/contact";
-@import "media";
+@import "./media-queries/media-home";
