completed media queries for mobile versions of the blog page

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -7,3 +7,5 @@
 @import "layout/blog";
 @import "layout/contact";
 @import "./media-queries/media-home";
+@import "./media-queries/media-blog";
+@import "./media-queries/media-contact";
