--- a/styles/main.css
+++ b/styles/main.css
@@ -1109,3 +1109,74 @@ main .wrapper {
     text-align: center;
   }
 }
+/* Portrait tablet and small desktops */
+@media (max-width: 940px) {
+  .header__heading {
+    margin-top: 18.5%;
+  }
+
+  .blog__aside {
+    margin: 0;
+    width: 35%;
+  }
+  .blog__aside img {
+    left: 0;
+  }
+}
+/* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+  .header {
+    height: 45vw;
+  }
+  .header .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+
+  .blog {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .blog__aside {
+    width: 100%;
+  }
+  .blog__aside__img {
+    width: 100%;
+  }
+  .blog__aside img {
+    width: 100%;
+    height: 30vw;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .blog__article {
+    width: 100%;
+    margin-top: 20%;
+  }
+  .blog__article__text {
+    margin: 0;
+    padding-right: 2.5rem;
+    border-left: 0;
+  }
+  .blog__article__comment {
+    margin: 2rem 10% 0 10%;
+  }
+}
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .blog__article__comment-user {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .blog__article__comment-img {
+    margin-bottom: 2rem;
+  }
+}
