--- a/styles/sass/_component.scss
+++ b/styles/sass/_component.scss
@@ -65,6 +65,16 @@
   overflow: hidden;
 }
 
-i.fa-bars {
-  visibility: hidden;
+.hamburger {
+  display: none;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: $white;
 }
