used JS to create hamburger menu effect

--- a/styles/main.css
+++ b/styles/main.css
@@ -1008,12 +1008,40 @@ main .wrapper {
             justify-content: space-between;
   }
   .navbar__items {
-    display: none;
+    position: fixed;
+    top: -100%;
+    left: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    background-color: #000;
+    text-align: center;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+  }
+  .navbar__items.active {
+    top: 0;
+  }
+  .navbar__items li {
+    margin: 1.5rem;
   }
 
   .hamburger {
     display: block;
     cursor: pointer;
+  }
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1) {
+    -webkit-transform: translateY(8px) rotate(45deg);
+            transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3) {
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+            transform: translateY(-8px) rotate(-45deg);
   }
 
   .workshop {
