removed hamburger menu when navbar link is clicked

--- a/styles/main.css
+++ b/styles/main.css
@@ -1038,6 +1038,7 @@ main .wrapper {
   .hamburger {
     display: block;
     cursor: pointer;
+    z-index: 1;
   }
   .hamburger.active .bar:nth-child(2) {
     opacity: 0;
