modified the size of textarea of blog page

--- a/styles/sass/media-queries/_media-blog.scss
+++ b/styles/sass/media-queries/_media-blog.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.blog__article .form fieldset textarea {
+  height: 15rem;
+}
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
   .header {
@@ -54,6 +58,10 @@
 
       &__comment {
         margin: 2rem 10% 0 10%;
+
+        &-user:nth-of-type(2) {
+          margin-bottom: 25%;
+        }
       }
     }
   }
