--- a/styles/main.css
+++ b/styles/main.css
@@ -1169,6 +1169,10 @@ main .wrapper {
     left: 0;
   }
 }
+.blog__article .form fieldset textarea {
+  height: 15rem;
+}
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
   .header {
@@ -1212,6 +1216,9 @@ main .wrapper {
   }
   .blog__article__comment {
     margin: 2rem 10% 0 10%;
+  }
+  .blog__article__comment-user:nth-of-type(2) {
+    margin-bottom: 25%;
   }
 }
 /* Landscape phones and down */
