--- a/styles/sass/media-queries/_media-contact.scss
+++ b/styles/sass/media-queries/_media-contact.scss
@@ -22,6 +22,10 @@
 
   .contact .form {
     width: 100%;
+
+    & fieldset textarea {
+      height: 35vw;
+    }
   }
 }
 
@@ -31,7 +35,13 @@
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
-  .contact .header {
-    height: 45vw;
+  .contact {
+    & .header {
+      height: 45vw;
+    }
+
+    & .form fieldset textarea {
+      height: 45vw;
+    }
   }
 }
