--- a/styles/sass/layout/_blog.scss
+++ b/styles/sass/layout/_blog.scss
@@ -199,3 +199,21 @@
     }
   }
 }
+
+.animation {
+  animation: slideup 0.3s forwards;
+}
+
+// Animation
+
+@keyframes slideup {
+  0% {
+    transform: translateY(10%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
